# universal-sdk

./: .gitignore  CMakeLists.txt  Inmate legal support   README.md  build.sh  inmate-legal-support-ms.md
.artifacts/6a7707bf-18f4-48e7-a798-439cc540cd6d/: implementation_plan.artifact.md
.github/workflows/: android.yml  ci.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/universalsdk/legalassist/: LegalAdviceResult.java  LegalAssistantJNI.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  legal_assistant_test  legal_assistant_test[1]_include.cmake  legal_assistant_test[1]_tests.cmake
examples/: legal_assistant_sample.cpp
include/: file_audit_writer.h  legal_assistant.h  stub_providers.h  universal_sdk.h
src/: file_audit_writer.cpp  legal_assistant.cpp  stub_providers.cpp  universal_sdk.cpp
src/platform/: android_impl.cpp  linux_impl.cpp  stub_platform_impl.cpp  win32_impl.cpp
tests/: legal_assistant_test.cpp  universal_sdk_test.cpp
